--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.apropos.smsforwarder">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:name=".SMSForwarderApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_sms_forwarder"
+        android:roundIcon="@drawable/ic_sms_forwarder"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.SMSForwarder">
 
         <activity android:name=".MainActivity"
             android:exported="true">
@@ -25,6 +27,8 @@
         </activity>
 
         <activity android:name=".LogActivity" />
+
+        <activity android:name=".SettingsActivity" />
 
         <service
             android:name=".SmsForwarderService"
